--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,24 @@
   "compilerOptions": {
     "target": "ES6",
     "module": "ESNext",
+    "lib": ["ES2020", "DOM"],
     "declaration": true,
+    "declarationMap": false,
     "outDir": "./dist",
+    "rootDir": "./src",
     "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node"
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "removeComments": false
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
 }
